# aiida-fenics

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.json  setup.py
.github/workflows/: ci.yml
aiida_fenics/: __init__.py
aiida_fenics/calculations/functions/: __init__.py  convert_mesh.py  geometry_to_mesh.py
aiida_fenics/utils/: logging.py
aiida_fenics/workflows/: geometry_poisson.py
tests/: conftest.py
tests/calculations/functions/: test_convert_mesh.py  test_geometry_to_mesh.py
tests/resources/geometries/: unit_square.geo
tests/resources/meshes/: unit_square.h5  unit_square.msh  unit_square.stl  unit_square.xdmf
